strategy test fixes